--- a/contracts/.algokit.toml
+++ b/contracts/.algokit.toml
@@ -11,7 +11,7 @@ path = ".algokit/generators/create_env_file"
 
 [project]
 type = 'contract'
-name = 'zeyo'
+name = 'rel'
 artifacts = 'smart_contracts/artifacts'
 
 [project.deploy]
